# PD2023

cuda/: .gitignore  CMakeLists.txt  README.md
cuda/include/: CommonKernels.cuh  KernelAdd.cuh  MatrixMul.cuh  ScalarMul.cuh  ScalarMulRunner.cuh
cuda/runners/: 01-add.cu  02-mul.cu  03-matrix-add.cu  04-matrix-vector-mul.cu  05-scalar-mul.cu  06-cosine-vector.cu  07-matrix-mul.cu
cuda/src/: CommonKernels.cu  CosineVector.cu  KernelAdd.cu  KernelMatrixAdd.cu  KernelMul.cu  MatrixMul.cu  MatrixVectorMul.cu  ScalarMul.cu  ScalarMulRunner.cu
cuda/time_measurements/: Results.ipynb  data.csv  data_template.csv
hdfs/hdfstask5/: run.sh
hive/hive_all_task/: test_query.sql
hive/hive_all_task/hivetask1/: queries.sql
hive/hive_all_task/hivetask2/: query.sql  run.sh
hive/hive_all_task/hivetask3/: query.sql
hive/hive_all_task/hivetask4/: query.sql
hive/hive_all_task/hivetask4/ReverseString/src/main/java/hw/mipt/: ReverseString.java
hive/hive_all_task/hivetask5/: change_domain.sh  query.sql
hive/hive_all_task/hivetask7/: query.sql
hive/hive_all_task/hivetask7/GetHostIpAddress/src/: GetHostIpAddress.java
hive/hivetask1/: 0_create_db.sql  0_create_tables.sql  run.sh
mapreduce/: .gitlab-ci.yml
mapreduce/mapreducetask1/: mapper.py  reducer.py  run.sh
mapreduce/mapreducetask2/: mapper_1.py  mapper_2.py  reducer_1.py  reducer_2.py  run.sh
mpi/: CMakeLists.txt  main.cpp  plots_client.ipynb  plots_cluster.ipynb
mpi/scripts/: check_profile_type  compile_mpi  run_mpi  run_profiling  run_sbatch_config
spark/materials/: 05-spark-base_nb.ipynb  05-spark-base_nb_new.ipynb
